test/errors/error18.vult
fun foo () {
   mem count = count + 1;
}
fun bar() {
   val a = 0;
}
and bob() {
   _ = a:foo();
}
